==> payano/stm32_zigbee/Src/Mrf24j.cpp <==
#include "Mrf24j.h"
#define MRF_RXMCR 0x00
#define MRF_PANIDL 0x01
#define MRF_PANIDH 0x02
#define MRF_SADRL 0x03
#define MRF_SADRH 0x04
#define MRF_EADR0 0x05
#define MRF_EADR1 0x06
#define MRF_EADR2 0x07
#define MRF_EADR3 0x08
#define MRF_EADR4 0x09
#define MRF_EADR5 0x0A
#define MRF_EADR6 0x0B
#define MRF_EADR7 0x0C
#define MRF_RXFLUSH 0x0D
#define MRF_ORDER 0x10
#define MRF_TXMCR 0x11
#define MRF_ACKTMOUT 0x12
#define MRF_ESLOTG1 0x13
#define MRF_SYMTICKL 0x14
#define MRF_SYMTICKH 0x15
#define MRF_PACON0 0x16
#define MRF_PACON1 0x17
#define MRF_PACON2 0x18
#define MRF_TXBCON0 0x1A
#define MRF_TXNCON      0x1B
#define MRF_TXNTRIG     0
#define MRF_TXNSECEN    1
#define MRF_TXNACKREQ   2
#define MRF_INDIRECT    3
#define MRF_FPSTAT      4
#define MRF_TXG1CON 0x1C
#define MRF_TXG2CON 0x1D
#define MRF_ESLOTG23 0x1E
#define MRF_ESLOTG45 0x1F
#define MRF_ESLOTG67 0x20
#define MRF_TXPEND 0x21
#define MRF_WAKECON 0x22
#define MRF_FRMOFFSET 0x23
#define MRF_TXSTAT 0x24
#define TXNRETRY1       7
#define TXNRETRY0       6
#define CCAFAIL         5
#define TXG2FNT         4
#define TXG1FNT         3
#define TXG2STAT        2
#define TXG1STAT        1
#define TXNSTAT         0
#define MRF_TXBCON1 0x25
#define MRF_GATECLK 0x26
#define MRF_TXTIME 0x27
#define MRF_HSYMTMRL 0x28
#define MRF_HSYMTMRH 0x29
#define MRF_SOFTRST 0x2A
#define MRF_SECCON0 0x2C
#define MRF_SECCON1 0x2D
#define MRF_TXSTBL 0x2E
#define MRF_RXSR 0x30
#define MRF_INTSTAT 0x31
#define MRF_INTCON 0x32

void Mrf24j::reset(void){
	//https://github.com/karlp/Mrf24j40-arduino-library/blob/master/mrf24j.cpp#L1
	HAL_GPIO_WritePin(mPinReset.GPIO, mPinReset.GPIO_Pin, GPIO_PIN_RESET);
	osDelay(10);
	HAL_GPIO_WritePin(mPinReset.GPIO, mPinReset.GPIO_Pin, GPIO_PIN_SET);
	osDelay(20);
}

void Mrf24j::interrupt_handler(void) {
    uint8_t last_interrupt = read_short(MRF_INTSTAT);
    if (last_interrupt & MRF_I_RXIF) {
        flag_got_rx++;
        // read out the packet data...
        //TODO FIX THIS
        //noInterrupts();
        //TODO FIX PROPER HANDLER FOR INTERRUPT
        interrupt(false);

        rx_disable();
        // read start of rxfifo for, has 2 bytes more added by FCS. frame_length = m + n + 2
        uint8_t frame_length = read_long(0x300);

        // buffer all bytes in PHY Payload
        if(bufPHY){
            int rb_ptr = 0;
            for (int i = 0; i < frame_length; i++) { // from 0x301 to (0x301 + frame_length -1)
                rx_buf[rb_ptr++] = read_long(0x301 + i);
            }
        }

        // buffer data bytes
        int rd_ptr = 0;
        // from (0x301 + bytes_MHR) to (0x301 + frame_length - bytes_nodata - 1)
        for (int i = 0; i < rx_datalength(); i++) {
            rx_info.rx_data[rd_ptr++] = read_long(0x301 + bytes_MHR + i);
        }

        rx_info.frame_length = frame_length;
        // same as datasheet 0x301 + (m + n + 2) <-- frame_length
        rx_info.lqi = read_long(0x301 + frame_length);
        // same as datasheet 0x301 + (m + n + 3) <-- frame_length + 1
        rx_info.rssi = read_long(0x301 + frame_length + 1);

        rx_enable();

        //TODO FIX THIS
        interrupt(true);
        //interrupts();
    }
    if (last_interrupt & MRF_I_TXNIF) {
        flag_got_tx++;
        uint8_t tmp = read_short(MRF_TXSTAT);
        // 1 means it failed, we want 1 to mean it worked.
        tx_info.tx_ok = !(tmp & ~(1 << TXNSTAT));
        tx_info.retries = tmp >> 6;
        tx_info.channel_busy = (tmp & (1 << CCAFAIL));
    }
}

uint8_t Mrf24j::read_short(uint8_t address){
	uint8_t result_data;
	//Mask data correctly before sending.
	address = address << 1;
	address &= 0b01111110;

	//Enable CS Pin, make MRF aware of incoming message.
	HAL_GPIO_WritePin(mPinCs.GPIO, mPinCs.GPIO_Pin, GPIO_PIN_RESET);

	//Send address and receive data
	HAL_SPI_Transmit(mSpi_handler,&address, bufferSize, 1);
	HAL_SPI_Receive(mSpi_handler,&result_data,bufferSize, 1);

	//Disable transfer to mrf.
	HAL_GPIO_WritePin(mPinCs.GPIO, mPinCs.GPIO_Pin, GPIO_PIN_SET);

	return result_data;
}

uint8_t Mrf24j::read_long(uint16_t address){
	uint8_t result_data;

	//Mask data correctly before reading.
	uint8_t address1 = ((address>>3)&0x7F)|0x80;
	uint8_t address2 = ((address<<5)&0xE0);

	//Enable CS Pin, make MRF aware of incoming message.
	HAL_GPIO_WritePin(mPinCs.GPIO, mPinCs.GPIO_Pin, GPIO_PIN_RESET);

	//Send address and receieve data
	HAL_SPI_Transmit(mSpi_handler,&address1, 1, 1);
	HAL_SPI_Transmit(mSpi_handler, &address2, 1, 1);
	HAL_SPI_Receive(mSpi_handler, &result_data, 1, 1);

	//Disable transfer to mrf.
	HAL_GPIO_WritePin(mPinCs.GPIO, mPinCs.GPIO_Pin, GPIO_PIN_SET);

	return result_data;
}

void Mrf24j::write_short(uint8_t address, uint8_t data){
	//Mask data correctly before sending.
	address = address << 1;
	address &= 0b01111111;
	address |= 0x01;

	//Enable CS Pin, make MRF aware of incoming message.
	HAL_GPIO_WritePin(mPinCs.GPIO, mPinCs.GPIO_Pin, GPIO_PIN_RESET);

	//Send address and data
	HAL_SPI_Transmit(mSpi_handler,&address, 1, 1);
	HAL_SPI_Transmit(mSpi_handler,&data, 1, 1);

	//Disable transfer to mrf.
	HAL_GPIO_WritePin(mPinCs.GPIO, mPinCs.GPIO_Pin, GPIO_PIN_SET);
}

void Mrf24j::write_long(uint16_t address, uint8_t data)
{
	//Mask data correctly before sending.
	uint8_t address1 = (((uint8_t)(address>>3))&0x7F)|0x80;
	uint8_t address2 = (((uint8_t)(address<<5))&0xE0)|0x10;

	//Enable CS Pin, make MRF aware of incoming message.
	HAL_GPIO_WritePin(mPinCs.GPIO, mPinCs.GPIO_Pin, GPIO_PIN_RESET);

	//Send address and data
	HAL_SPI_Transmit(mSpi_handler, &address1, 1, 1);
	HAL_SPI_Transmit(mSpi_handler, &address2, 1, 1);
	HAL_SPI_Transmit(mSpi_handler, &data, 1, 1);

	//Disable transfer to mrf.
	HAL_GPIO_WritePin(mPinCs.GPIO, mPinCs.GPIO_Pin, GPIO_PIN_SET);
}
