==> plambrechtsen/pethublocal/WemosPetHub/src/mrf24j.cpp <==
#include "mrf24j.h"

void Mrf24j::reset(void) {
    SPI.beginTransaction(mySettings);
    digitalWrite(_pin_reset, LOW);
    delayMicroseconds(300*1000);  // adjusted to be the same value
    digitalWrite(_pin_reset, HIGH);
    delayMicroseconds(300*1000);  // from manual
    SPI.endTransaction();

}

byte Mrf24j::read_short(byte address) {
    SPI.beginTransaction(mySettings);
    digitalWrite(_pin_cs, LOW);
    // 0 top for short addressing, 0 bottom for read
    SPI.transfer(address<<1 & 0b01111110);
    byte ret = SPI.transfer(0x00);
    digitalWrite(_pin_cs, HIGH);
    SPI.endTransaction();
    return ret;
}

byte Mrf24j::read_long(word address) {
    SPI.beginTransaction(mySettings);
    digitalWrite(_pin_cs, LOW);
    byte ahigh = address >> 3;
    byte alow = address << 5;
    SPI.transfer(0x80 | ahigh);  // high bit for long
    SPI.transfer(alow);
    byte ret = SPI.transfer(0);
    digitalWrite(_pin_cs, HIGH);
    SPI.endTransaction();
    return ret;
}

void Mrf24j::write_short(byte address, byte data) {
    SPI.beginTransaction(mySettings);
    digitalWrite(_pin_cs, LOW);
    // 0 for top short address, 1 bottom for write
    SPI.transfer((address<<1 & 0b01111110) | 0x01);
    SPI.transfer(data);
    digitalWrite(_pin_cs, HIGH);
    SPI.endTransaction();
}

void Mrf24j::write_long(word address, byte data) {
    SPI.beginTransaction(mySettings);
    digitalWrite(_pin_cs, LOW);
    byte ahigh = address >> 3;
    byte alow = address << 5;
    SPI.transfer(0x80 | ahigh);  // high bit for long
    SPI.transfer(alow | 0x10);  // last bit for write
    SPI.transfer(data);
    digitalWrite(_pin_cs, HIGH);
    SPI.endTransaction();
}

void Mrf24j::interrupt_handler(void) {
    uint8_t last_interrupt = read_short(MRF_INTSTAT);
    if (last_interrupt & MRF_I_RXIF) {
        flag_got_rx++;
        // read out the packet data...
        noInterrupts();
        rx_disable();
        // read start of rxfifo for, has 2 bytes more added by FCF. frame_length = m + n + 2
        uint8_t frame_length = read_long(MRF_RXFIFO);
        rx_info.frame_length = frame_length;

        // Frame Control Field into fcf word.
        rx_info.fcf.w = read_long(MRF_RXFIFO + 2) << 8 | read_long(MRF_RXFIFO + 1);

        // Update rx_info src and dest mac and header_length based on Source and Destination Addressing Mode length.
        uint8_t len = 5;
        uint8_t dstlen = fcsamlength[rx_info.fcf.dam];
        uint8_t srclen = fcsamlength[rx_info.fcf.sam];
        if ( dstlen > 0 ) {
            for (int d = 0; d < dstlen; d++) {
                rx_info.dst[d] = read_long(MRF_RXFIFO + 1 + len + d );
            }
        }
        if ( srclen > 0 ) {
            for (int s = 0; s < srclen; s++) {
                rx_info.src[s] = read_long(MRF_RXFIFO + 1 + len + dstlen + s );
            }
        }
        rx_info.header_length = len + dstlen + srclen;
        rx_info.data_length = rx_info.frame_length - rx_info.header_length;

        // Copy payload
        if ( rx_info.frame_length > rx_info.header_length ) {
            for (int i = 0 ; i < rx_info.frame_length - rx_info.header_length ; i++) {
                // MRF_RXFIFO + Remove Length Byte + Header Length = Payload
                rx_info.data[i] = read_long(MRF_RXFIFO + 1 + rx_info.header_length + i);
            }
        }

        // LQI first byte after frame as per datasheet
        rx_info.lqi = read_long(MRF_RXFIFO + frame_length + 1 );

        // RSSI second byte after frame as per datasheet
        rx_info.rssi = read_long(MRF_RXFIFO + frame_length + 2 );
        rx_enable();
        interrupts();
    }
    if (last_interrupt & MRF_I_TXNIF) {
        flag_got_tx++;
        uint8_t tmp = read_short(MRF_TXSTAT);
        // 1 means it failed, we want 1 to mean it worked.
        tx_info.tx_ok = !(tmp & ~(1 << TXNSTAT));
        tx_info.retries = tmp >> 6;
        tx_info.channel_busy = (tmp & (1 << CCAFAIL));
    }
}
